refactoring communityTab using Tablayout, ViewPager2

--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
 
     <string name="recy_meetup">Recy-Meetup</string>
     <string name="recy_meetup_description">환경에 진심인 크루들의 모임의 장! 함께 모여 플로깅을 하며 건강과 환경을 지켜요🌱</string>
+    <string name="play">실행</string>
 
 </resources>
