--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -54,14 +54,17 @@
 
     <!-- SignInActivity    -->
     <string name="welcome_message">반가워요 회원님!</string>
-    <string name="failure_firebase_auth">Firebase 인증 실패</string>
-    <string name="already_existed_user">이미 존재하는 회원임. 초기화를 스킵합니다.</string>
-    <string name="success_register_user">유저가 성공적으로 저장되었습니다.</string>
-    <string name="failure_register_user">유저 등록이 실패했습니다</string>
-    <string name="failure_check_user">firestore에서 유저 확인이 불가능합니다.</string>
     <string name="default_web_client_id">470817209530-40d10pr00gntk355qel6ojgtvb9cefco.apps.googleusercontent.com</string>
+
+    <!-- MyPage  -->
     <string name="guest">Guest</string>
     <string name="needLogin">로그인이 필요합니다.</string>
+
+    <!-- EditProfile   -->
+    <string name="nickname_available_message">사용 가능한 닉네임입니다.</string>
+    <string name="nickname_duplicate_message">이미 존재하는 닉네임입니다.</string>
+    <string name="nickname_error_message">잘못된 닉네임입니다.</string>
+    <string name="nickname_empty_message">닉네임을 입력해주세요.</string>
 
 
 </resources>
