--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -75,4 +75,13 @@
 
     <!-- homeFragment    -->
     <string name="label">Label</string>
+
+    <!-- RestaurantFragment   -->
+    <string name="lotNumber_address">지번주소</string>
+    <string name="roadName_address">도로명주소</string>
+    <string name="distance">나와의 거리</string>
+    <string name="phone_number">업체 번호</string>
+    <string name="place_url">업체 링크</string>
+    <string name="meter">%1$s m</string>
+
 </resources>
