--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <!--  홈 탭 사용   -->
     <string name="hello">안녕하세요 :)</string>
     <string name="display_points">320 포인트가 모였어요!</string>
-    <string name="display_giveaway">오늘은 어떤 나눔을?</string>
+    <string name="display_giveaway">오늘은 어떤 식당을?</string>
     <string name="recycle_method">분류별 배출 방법</string>
     <string name="search_text">검색어를 입력해주세요</string>
 
@@ -95,5 +95,8 @@
     <!-- Weather(SurroundingFragment) -->
     <string name="time">시간</string>
     <string name="temperature">기온</string>
+    <string name="edittext_hint">다른 이용자를 위한 솔직한 리뷰를 남겨주세요!</string>
+    <string name="add">등록</string>
+    <string name="comment">이것은 댓글 내용입니다. 여러 줄로 작성될 수 있습니다.</string>
 
 </resources>
