--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <!--  홈 탭 사용   -->
     <string name="hello">안녕하세요 :)</string>
     <string name="display_points">320 포인트가 모였어요!</string>
-    <string name="display_giveaway">오늘은 어떤 식당을?</string>
-    <string name="recycle_method">분류별 배출 방법</string>
+    <string name="btn_map">오늘은 주변의 어떤 음식점을 찾으시나요?</string>
+    <string name="recycle_method">음식점 카테고리</string>
     <string name="search_text">검색어를 입력해주세요</string>
 
     <!--    마이페이지 탭 사용-->
